make funktioniert gut, aber lässt sich noch nicht mit texstudio compilieren

--- a/RegT2.tex
+++ b/RegT2.tex
@@ -15,7 +15,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \include{header/header}
 
-\include{revision}
+
+\IfFileExists{./revision.tex}{\include{revision}}
+
 
 \usepackage{booktabs}
 \usepackage{longtable}
